# ideas

./: compile_commands.json  main.cpp  meson.build  todo.md
.cache/clangd/index/: animatable.hpp.611C1EA9DFE3EA71.idx  animation.hpp.DCD25E5BC6E34489.idx  ball.hpp.76AA458021840576.idx  colors.h.9C066C262B85C893.idx  drawable.hpp.79D03D43930D0CAB.idx  drawable_collection.hpp.72E6F719EC511B0C.idx  main.cpp.E47C9678F522F3C2.idx  math_overloads.hpp.F8EE503884152F7A.idx  reasings.h.965E4DA1B1AC1198.idx  text_ball.hpp.1A8938AD80D9837F.idx  util.h.67D03243D7A725DF.idx
demos/: random_balls.cpp  random_color_bubbles.cpp
include/: animatable.hpp  animation.hpp  ball.hpp  collisionable.hpp  colors.h  drawable.hpp  drawable_collection.hpp  math_overloads.hpp  text_ball.hpp  timer.hpp  util.h
src/: animatable.cpp  animation.cpp  ball.cpp  ball_collection.cpp  collisionable.cpp  drawable.cpp  drawable_collection.cpp  math_overloads.cpp  text_ball.cpp  timer.cpp  util.cpp
